# cardano-coin-selection

./: .gitignore  .hlint.yaml  404.html  CHANGELOG.md  NOTICE  README.md  WIP.md  cabal.project  cardano-coin-selection.cabal  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
concepts/change-generation/: index.html
concepts/collateral/: index.html
concepts/minting-burning/: index.html
concepts/selection-strategies/: index.html
concepts/utxo-model/: index.html
data-structures/utxo-index/: index.html
data-structures/utxo-selection/: index.html
docs/: getting-started.md  index.md  references.md
docs/data-structures/: utxo-index.md  utxo-selection.md
docs/math/: equipartition.md  partial-orders.md  partitioning.md
getting-started/: index.html
lib/Cardano/: CoinSelection.hs
lib/Cardano/CoinSelection/: Balance.hs  Collateral.hs  Context.hs  Size.hs  UTxOIndex.hs  UTxOSelection.hs
lib/Cardano/CoinSelection/Balance/: Gen.hs
lib/Cardano/CoinSelection/Internal/: Numeric.hs
lib/Cardano/CoinSelection/Test/: Laws.hs
lib/Cardano/CoinSelection/Types/: AssetId.hs  AssetName.hs  Coin.hs  Hash.hs  TokenBundle.hs  TokenMap.hs  TokenPolicyId.hs  TokenQuantity.hs
lib/Cardano/CoinSelection/Types/AssetId/: Gen.hs
lib/Cardano/CoinSelection/Types/AssetName/: Gen.hs
lib/Cardano/CoinSelection/Types/Coin/: Gen.hs
lib/Cardano/CoinSelection/Types/TokenBundle/: Gen.hs
lib/Cardano/CoinSelection/Types/TokenMap/: Gen.hs
lib/Cardano/CoinSelection/Types/TokenPolicyId/: Gen.hs
lib/Cardano/CoinSelection/Types/TokenQuantity/: Gen.hs
lib/Cardano/CoinSelection/UTxOIndex/: Gen.hs  Internal.hs
lib/Cardano/CoinSelection/UTxOSelection/: Gen.hs
lib/Control/Monad/Random/: NonRandom.hs
math/coalescing/: index.html
math/equipartition/: index.html
math/partial-orders/: index.html
math/partitioning/: index.html
nix/: project.nix
references/: index.html
search/: search_index.json
test/spec/Cardano/: CoinSelectionSpec.hs
test/spec/Cardano/CoinSelection/: BalanceSpec.hs  CollateralSpec.hs  UTxOIndexSpec.hs  UTxOSelectionSpec.hs
tutorial/: index.html
